--- a/.github/workflows/build-static-stats.yml
+++ b/.github/workflows/build-static-stats.yml
@@ -17,79 +17,73 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: true
-
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: |
-          npm init -y >/dev/null 2>&1
-          npm install js-yaml@4
+          fetch-depth: 0
 
       - name: Fetch current NFL week and season
         run: |
+          set -euxo pipefail
           curl -s https://api.sleeper.app/v1/state/nfl > nfl_state.json
+          cat nfl_state.json
           echo "SEASON=$(jq -r '.season' nfl_state.json)" >> $GITHUB_ENV
           echo "WEEK=$(jq -r '.week' nfl_state.json)" >> $GITHUB_ENV
-          cat nfl_state.json
 
-      - name: Build stats-static.yml
+      - name: Build stats-static.yml (JSON-as-YAML, no dependencies)
         run: |
-          node --input-type=module <<'EOF'
-          import fs from "fs";
-          import yaml from "js-yaml";
+          set -euxo pipefail
+          python3 - <<'PY'
+          import json, os, urllib.request, datetime
 
-          const season = Number(process.env.SEASON);
-          const currentWeek = Number(process.env.WEEK);
-          const lastCompletedWeek = Math.max(0, currentWeek - 1);
+          season = int(os.environ["SEASON"])
+          current_week = int(os.environ["WEEK"])
+          last_completed = max(0, current_week - 1)
 
-          async function fetchJson(url) {
-            const res = await fetch(url);
-            if (!res.ok) throw new Error(`HTTP ${res.status} ${url}`);
-            return res.json();
+          def fetch_json(url):
+            with urllib.request.urlopen(url, timeout=60) as r:
+              return json.loads(r.read().decode("utf-8"))
+
+          weeks = {}
+          for w in range(1, last_completed + 1):
+            url = f"https://api.sleeper.app/v1/stats/nfl/{season}/{w}"
+            try:
+              data = fetch_json(url)
+              weeks[str(w)] = data if data else None
+              print(f"Week {w}: OK")
+            except Exception as e:
+              weeks[str(w)] = None
+              print(f"Week {w}: FAILED ({e})")
+
+          out = {
+            "season": season,
+            "generated_at": datetime.datetime.utcnow().replace(microsecond=0).isoformat() + "Z",
+            "weeks": weeks
           }
 
-          const weeks = {};
-          for (let w = 1; w <= lastCompletedWeek; w++) {
-            const url = `https://api.sleeper.app/v1/stats/nfl/${season}/${w}`;
-            try {
-              const data = await fetchJson(url);
-              weeks[String(w)] = data || null;
-              console.log(`Week ${w}: OK`);
-            } catch (e) {
-              weeks[String(w)] = null;
-              console.log(`Week ${w}: FAILED (${e.message})`);
-            }
-          }
+          # Write JSON; valid YAML 1.2
+          with open("stats-static.yml", "w", encoding="utf-8") as f:
+            json.dump(out, f, ensure_ascii=False, indent=2)
 
-          const output = {
-            season,
-            generated_at: new Date().toISOString(),
-            weeks
-          };
+          print("Wrote stats-static.yml")
+          PY
 
-          const yml = yaml.dump(output, { lineWidth: 120, noRefs: true });
-          fs.writeFileSync("stats-static.yml", yml, "utf8");
-
-          console.log("Wrote stats-static.yml");
-          console.log(`Season=${season} lastCompletedWeek=${lastCompletedWeek}`);
-          EOF
-
-      - name: Show generated file
-        run: |
-          ls -la
           test -f stats-static.yml
-          head -n 40 stats-static.yml
+          ls -la stats-static.yml
+          head -n 25 stats-static.yml
+
+      - name: Upload stats-static.yml artifact (proof file exists)
+        uses: actions/upload-artifact@v4
+        with:
+          name: stats-static-yml
+          path: stats-static.yml
+          if-no-files-found: error
 
       - name: Commit and push
         run: |
+          set -euxo pipefail
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-          git add stats-static.yml package.json package-lock.json
+          git add stats-static.yml
           git status
 
-          git commit -m "Update static Sleeper stats (week ${WEEK})" || echo "No changes to commit"
+          git commit -m "Update static Sleeper stats (week ${WEEK})" || exit 0
           git push
