--- a/.github/workflows/build-static-stats.yml
+++ b/.github/workflows/build-static-stats.yml
@@ -27,9 +27,11 @@ jobs:
           echo "SEASON=$(jq -r '.season' nfl_state.json)" >> $GITHUB_ENV
           echo "WEEK=$(jq -r '.week' nfl_state.json)" >> $GITHUB_ENV
 
-      - name: Build stats-static.yml (JSON-as-YAML, no dependencies)
+      - name: Build data/stats-static.json
         run: |
           set -euxo pipefail
+          mkdir -p data
+
           python3 - <<'PY'
           import json, os, urllib.request, datetime
 
@@ -55,26 +57,19 @@ jobs:
           out = {
             "season": season,
             "generated_at": datetime.datetime.utcnow().replace(microsecond=0).isoformat() + "Z",
+            "last_completed_week": last_completed,
             "weeks": weeks
           }
 
-          # Write JSON; valid YAML 1.2
-          with open("stats-static.yml", "w", encoding="utf-8") as f:
+          with open("data/stats-static.json", "w", encoding="utf-8") as f:
             json.dump(out, f, ensure_ascii=False, indent=2)
 
-          print("Wrote stats-static.yml")
+          print("Wrote data/stats-static.json")
           PY
 
-          test -f stats-static.yml
-          ls -la stats-static.yml
-          head -n 25 stats-static.yml
-
-      - name: Upload stats-static.yml artifact (proof file exists)
-        uses: actions/upload-artifact@v4
-        with:
-          name: stats-static-yml
-          path: stats-static.yml
-          if-no-files-found: error
+          test -f data/stats-static.json
+          ls -la data
+          head -n 30 data/stats-static.json
 
       - name: Commit and push
         run: |
@@ -82,7 +77,7 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-          git add stats-static.yml
+          git add data/stats-static.json
           git status
 
           git commit -m "Update static Sleeper stats (week ${WEEK})" || exit 0
